deployments/k8s/sqlrunner-deployment-dockerhub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sqlrunner
  name: sqlrunner-deployment
  labels:
    app: sqlrunner
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: sqlrunner
  template:
    metadata:
      labels:
        app: sqlrunner
    spec:
      containers:
      - image: smdeeg/sqlrunner:0.1
        name: sqlrunner
#      imagePullSecrets:
#      - name: harbor-credentials
