deployments/k8s/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  namespace: sqlrunner
  name: sqlrunner-lb
spec:
  ports:
    - name: sqlrunner-svc-ports
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: sqlrunner
  type: LoadBalancer
status:
  loadBalancer: {}
