deployments/k8s/sqlrunner-full-lb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sqlrunner
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sqlrunner
  name: sqlrunner-deployment
  labels:
    app: sqlrunner
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: sqlrunner
  template:
    metadata:
      labels:
        app: sqlrunner
    spec:
      containers:
      - name: sqlrunner
        image: registry.planet10.lab/apps/sqlrunner:1.0
#      imagePullSecrets:
#      - name: registry20
---
apiVersion: v1
kind: Service
metadata:
  namespace: sqlrunner
  name: sqlrunner-lb
spec:
  ports:
    - name: sqlrunner-svc-ports
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: sqlrunner
  type: LoadBalancer
status:
  loadBalancer: {}
