deployments/k8s/sqlrunner-full-Ingress-dockerhub.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sqlrunner
  labels:
    node-port: allowed

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sqlrunner
  name: sqlrunner-deployment
  labels:
    app: sqlrunner
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: sqlrunner
  template:
    metadata:
      labels:
        app: sqlrunner
    spec:
      containers:
      - image: smdeeg/sqlrunner:0.1
        name: sqlrunner
#      imagePullSecrets:
#      - name: registry20
---
apiVersion: v1
kind: Service
metadata:
  name: sqlrunner-svc-internal
  namespace: sqlrunner
#  labels:
#    nsx-alb-l7-np: enabled
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  #sessionAffinity: None
  selector:
    app: sqlrunner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sqlrunner-ingress
  namespace: sqlrunner
spec:
#  ingressClassName: avi-lb
  rules:
  - host: sqlrunner.banzi.tkgs.planet10.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sqlrunner-svc-internal
            port:
              number: 80
