deployments/k8s/sqlrunner-full-Ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sqlrunner
  labels:
    node-port: allowed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sqlrunner
  name: sqlrunner-deployment
  labels:
    app: sqlrunner
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: sqlrunner
  template:
    metadata:
      labels:
        app: sqlrunner
    spec:
      containers:
      - name: sqlrunner
        image: registry.planet10.lab/apps/sqlrunner:1.0
      imagePullSecrets:
      - name: harbor-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: sqlrunner-svc-internal
  namespace: sqlrunner
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sqlrunner.banzi.tkgs.planet10.lab
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  #sessionAffinity: None
  selector:
    app: sqlrunner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sqlrunner-ingress
  namespace: sqlrunner
spec:
#  ingressClassName: avi-lb
  rules:
  - host: sqlrunner.banzi.tkgs.planet10.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sqlrunner-svc-internal
            port:
              number: 80
